# yaru-remix-theme-toggle

./: Makefile  README.md  install.md  meson.build  meson_options.txt
yaru-blue-theme-toggle@muqtxdir.me/: extension.js  metadata.json
yaru-remix-theme-toggle@muqtxdir.me/: extension.js  metadata.json
yarubluethemetoggle@muqtxdir.me/: extension.js
