project('Yaru remix theme toggle',
        version: '20.04',
        meson_version: '>= 0.51',
        license : ['GPL3', 'CC BY-SA 4.0'],
        default_options: ['prefix=~/.local'])

install_subdir('yaru-blue-theme-toggle@muqtxdir.me',
    install_dir: join_paths(get_option('prefix'), 'share/gnome-shell/extensions')
)

